# singledispatch-with-type-arg-support

./: .gitlab-ci.yml  LICENSE  README.md  example.py  pyproject.toml  singledispatch_with_type_arg_support.py
tests/: support.py  test_singledispatch.py
