[tool.poetry]
name = "singledispatch-with-type-arg-support"
version = "0.1.2"
description = "singledispatch with support for type/class arguments"
authors = ["smheidrich <smheidrich@weltenfunktion.de>", "CPython contributors"]
packages = [
  { include = "singledispatch_with_type_arg_support.py" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
